
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct net_device {int dummy; } ;
struct ixgb_adapter {int netdev; } ;
struct ethtool_cmd {int supported; int advertising; int speed; int duplex; int autoneg; int transceiver; int port; } ;


 int ADVERTISED_10000baseT_Full ;
 int ADVERTISED_FIBRE ;
 int AUTONEG_DISABLE ;
 int DUPLEX_FULL ;
 int PORT_FIBRE ;
 int SPEED_10000 ;
 int SUPPORTED_10000baseT_Full ;
 int SUPPORTED_FIBRE ;
 int XCVR_EXTERNAL ;
 struct ixgb_adapter* netdev_priv (struct net_device*) ;
 scalar_t__ netif_carrier_ok (int ) ;

__attribute__((used)) static int
ixgb_get_settings(struct net_device *netdev, struct ethtool_cmd *ecmd)
{
 struct ixgb_adapter *adapter = netdev_priv(netdev);

 ecmd->supported = (SUPPORTED_10000baseT_Full | SUPPORTED_FIBRE);
 ecmd->advertising = (ADVERTISED_10000baseT_Full | ADVERTISED_FIBRE);
 ecmd->port = PORT_FIBRE;
 ecmd->transceiver = XCVR_EXTERNAL;

 if (netif_carrier_ok(adapter->netdev)) {
  ecmd->speed = SPEED_10000;
  ecmd->duplex = DUPLEX_FULL;
 } else {
  ecmd->speed = -1;
  ecmd->duplex = -1;
 }

 ecmd->autoneg = AUTONEG_DISABLE;
 return 0;
}
